// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AttachmentManager store reducer when ADD_ATTACHMENT adds an attachment 1`] = `
Object {
  "post-new": Array [
    Object {
      "attachmentType": "file",
      "url": "bar.pdf",
    },
  ],
}
`;

exports[`AttachmentManager store reducer when REMOVE_ATTACHMENT removes an attachment 1`] = `
Object {
  "post-new": Array [
    Object {
      "attachmentType": "file",
      "url": "a.pdf",
    },
    Object {
      "attachmentType": "file",
      "url": "c.pdf",
    },
    Object {
      "attachmentType": "image",
      "url": "a.png",
    },
    Object {
      "attachmentType": "image",
      "url": "b.png",
    },
    Object {
      "attachmentType": "image",
      "url": "c.png",
    },
  ],
}
`;

exports[`AttachmentManager store reducer when SET_ATTACHMENTS sets attachments 1`] = `
Object {
  "post-new": Array [
    Object {
      "url": "foo.pdf",
    },
    Object {
      "url": "bar.xls",
    },
    Object {
      "url": "foo.png",
    },
    Object {
      "url": "bar.jpg",
    },
  ],
}
`;

exports[`AttachmentManager store reducer when SWITCH_ATTACHMENTS switches two attachments 1`] = `
Object {
  "post-new": Array [
    Object {
      "attachmentType": "file",
      "url": "a.pdf",
    },
    Object {
      "attachmentType": "file",
      "url": "b.pdf",
    },
    Object {
      "attachmentType": "file",
      "url": "c.pdf",
    },
    Object {
      "attachmentType": "image",
      "url": "a.png",
    },
    Object {
      "attachmentType": "image",
      "url": "b.png",
    },
    Object {
      "attachmentType": "image",
      "url": "c.png",
    },
  ],
}
`;
